[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_help", "sopel_help.*"]
namespaces = false

[project]
name = "sopel-help"
version = "0.5.1"
description = "Help plugin for Sopel"
keywords = ["sopel", "irc", "help", "doc", "plugin"]
maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
  { name="Florian Strzelecki", email="florian.strzelecki@gmail.com" },
]
authors = [
  { name="dgw", email="dgw@technobabbl.es" },
  { name="Florian Strzelecki", email="florian.strzelecki@gmail.com" },
]
readme = "README.rst"
license = { text="EFL-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.8"
dependencies = [
    "sopel>=7.1",
    # sopel also requires both of the below, but it's best to be explicit
    "requests",
    "importlib_metadata>=3.6",
]

[project.urls]
"Bug Tracker" = "https://github.com/sopel-irc/sopel-help/issues"
"Source" = "https://github.com/sopel-irc/sopel-help"

[project.entry-points."sopel.plugins"]
help = "sopel_help.plugin"

[project.entry-points."sopel_help.providers"]
base = "sopel_help.providers:Base"
local = "sopel_help.providers:LocalFile"
clbin = "sopel_help.providers:CLBinPublisher"
0x0 = "sopel_help.providers:NullPointerPublisher"
termbin = "sopel_help.providers:TermBinPublisher"
