[metadata]
name = sopel-help
version = 0.0.1-dev
description = Help plugin for Sopel
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Florian Strzelecki
author_email = florian.strzelecki@gmail.com
url = https://github.com/sopel-irc/sopel-help
license = Eiffel Forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=3.5, <4
packages = find:
zip_safe = false
install_requires =
    sopel>=7

[options.entry_points]
sopel.plugins =
    help = sopel_help.plugin

[flake8]
max-line-length = 79
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:run]
branch = True
source = sopel_help
