[metadata]
name = sopel-help
version = 0.3.0
description = Help plugin for Sopel
keywords = sopel plugin help bot irc
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Florian Strzelecki
author_email = florian.strzelecki@gmail.com
url = https://github.com/sopel-irc/sopel-help
license = Eiffel Forum License, version 2
license_file = LICENSE.txt
platforms = Linux x86, x86-64
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=3.5, <4
packages = find:
zip_safe = false
install_requires =
    sopel>=7.1
    requests

[options.packages.find]
exclude =
    sopel
    sopel.*

[options.entry_points]
sopel.plugins =
    help = sopel_help.plugin
sopel_help.providers =
    base = sopel_help.providers:Base
    local = sopel_help.providers:LocalFile
    clbin = sopel_help.providers:CLBinPublisher
    0x0 = sopel_help.providers:NullPointerPublisher
    termbin = sopel_help.providers:TermBinPublisher
    ubuntu = sopel_help.providers:UbuntuPublisher

[flake8]
max-line-length = 79
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[coverage:run]
branch = True
source = sopel_help

[isort]
line_length = 79
known_third_party = sopel
known_first_party = sopel_help
